# automateusz_gto_d2

./: CMakeLists.txt  CMakeLists.txt.in
include/gto_d2_kit/: d2_ee_dddd_AA_xz.hpp  d2_ee_dddd_AA_yx.hpp  d2_ee_dddd_AA_yy.hpp  d2_ee_dddd_AA_yz.hpp  d2_ee_dddd_AA_zy.hpp  d2_ee_dddd_AA_zz.hpp  d2_ee_dddd_AB_xy.hpp  d2_ee_dddd_AB_xz.hpp  d2_ee_dddd_AB_zx.hpp  d2_ee_dddd_AC_xz.hpp  d2_ee_dddd_AC_yy.hpp  d2_ee_dddd_AC_yz.hpp  d2_ee_dddd_AD.hpp  d2_ee_dddd_BD.hpp  d2_ee_dddd_CD.hpp  d2_ee_dddp_AB.hpp  d2_ee_dddp_AC.hpp  d2_ee_dddp_AD.hpp  d2_ee_dddp_BB.hpp  d2_ee_dddp_BD.hpp  d2_ee_dddp_CD.hpp  d2_ee_ddds_AB.hpp  d2_ee_ddds_AC.hpp  d2_ee_ddds_AD.hpp  d2_ee_ddds_BB.hpp  d2_ee_ddds_DD.hpp  d2_ee_ddpd_AA.hpp  d2_ee_ddpd_AA_xy.hpp  d2_ee_ddpd_AA_yy.hpp  d2_ee_ddpd_AA_zx.hpp  d2_ee_ddpd_AA_zy.hpp  d2_ee_ddpd_AB_xz.hpp  d2_ee_ddpd_AB_yx.hpp  d2_ee_ddpd_AB_yz.hpp  d2_ee_ddpd_AB_zz.hpp  d2_ee_ddpd_AC.hpp  d2_ee_ddpd_BC.hpp  d2_ee_ddpd_DD.hpp  d2_ee_ddpp_AA.hpp  d2_ee_ddpp_AA_xx.hpp  (+559 more)
python_scripts/include_src_writers/: .#write_d2_ee.py  .#write_d2_ee_hpp_cpp.py  .#write_d2_vne_ey_cpp_hpp.py  d2_ee_include.txt  d2_ee_matrix.txt  d2_ee_src.txt  get_includes.py  single_d2_ee.py  single_d2_ee.py~  single_d2_ee_kopia.py  write_d2_ee_ey_cpp.py  write_d2_ee_ey_cpp.py~  write_d2_ee_hpp_cpp.py  write_d2_ee_matrix.py  write_d2_vne_ey_cpp_hpp.py  write_d2vne_matrix.py
python_scripts/include_src_writers/include/: d2_ee_dddd_AA.hpp  d2_ee_dddd_AA_xx.hpp  d2_ee_dddd_AA_xy.hpp  d2_ee_dddd_AA_zx.hpp  d2_ee_dddd_AB.hpp  d2_ee_dddd_AB_xx.hpp  d2_ee_dddd_AB_yx.hpp  d2_ee_dddd_AB_yy.hpp  d2_ee_dddd_AB_yz.hpp  d2_ee_dddd_AB_zy.hpp  d2_ee_dddd_AB_zz.hpp  d2_ee_dddd_AC.hpp  d2_ee_dddd_AC_xx.hpp  d2_ee_dddd_AC_xy.hpp  d2_ee_dddd_AC_yx.hpp  d2_ee_dddd_AC_zx.hpp  d2_ee_dddd_AC_zy.hpp  d2_ee_dddd_AC_zz.hpp  d2_ee_dddd_BB.hpp  d2_ee_dddd_BC.hpp  d2_ee_dddd_CC.hpp  d2_ee_dddd_DD.hpp  d2_ee_dddp_AA.hpp  d2_ee_dddp_BC.hpp  d2_ee_dddp_CC.hpp  d2_ee_dddp_DD.hpp  d2_ee_ddds_AA.hpp  d2_ee_ddds_BC.hpp  d2_ee_ddds_BD.hpp  d2_ee_ddds_CC.hpp  d2_ee_ddds_CD.hpp  d2_ee_ddpd_AA_xx.hpp  d2_ee_ddpd_AA_xz.hpp  d2_ee_ddpd_AA_yx.hpp  d2_ee_ddpd_AA_yz.hpp  d2_ee_ddpd_AA_zz.hpp  d2_ee_ddpd_AB.hpp  d2_ee_ddpd_AB_xx.hpp  d2_ee_ddpd_AB_xy.hpp  d2_ee_ddpd_AB_yy.hpp  (+485 more)
python_scripts/include_src_writers/src/: d2_ee_dddd_AA_xy.ey  d2_ee_dddd_AA_zx.ey  d2_ee_dddd_AA_zy.ey  d2_ee_dddd_AA_zz.ey  d2_ee_dddd_AB_xx.ey  d2_ee_dddd_AB_xy.ey  d2_ee_dddd_AB_xz.ey  d2_ee_dddd_AB_yx.ey  d2_ee_dddd_AB_yy.ey  d2_ee_dddd_AB_yz.ey  d2_ee_dddd_AB_zx.ey  d2_ee_dddd_AB_zy.ey  d2_ee_dddd_AB_zz.ey  d2_ee_dddd_AC_xy.ey  d2_ee_dddd_AC_yx.ey  d2_ee_dddd_AC_yy.ey  d2_ee_dddd_AC_yz.ey  d2_ee_dddd_AC_zz.ey  d2_ee_dddd_BD.cpp  d2_ee_dddd_CD.cpp  d2_ee_dddp_AB.cpp  d2_ee_dddp_AC.cpp  d2_ee_dddp_BC.cpp  d2_ee_dddp_CC.cpp  d2_ee_dddp_DD.cpp  d2_ee_ddds_AA.cpp  d2_ee_ddds_BB.cpp  d2_ee_ddds_BD.cpp  d2_ee_ddds_CD.cpp  d2_ee_ddpd_AA_xx.ey  d2_ee_ddpd_AA_xy.ey  d2_ee_ddpd_AA_zx.ey  d2_ee_ddpd_AA_zz.ey  d2_ee_ddpd_AB_xx.ey  d2_ee_ddpd_AB_xz.ey  d2_ee_ddpd_AB_yx.ey  d2_ee_ddpd_AB_yy.ey  d2_ee_ddpd_AB_yz.ey  d2_ee_ddpd_AB_zx.ey  d2_ee_ddpd_AB_zy.ey  (+485 more)
python_scripts/test_writer/: kinetic_writer.py  overlap_writer.py  vee_writer.py  vee_writer_numerical.py  vne_writer.py
python_scripts/test_writer/kinetic/: kinetic_test.cpp
python_scripts/test_writer/overlap/: overlap_test.cpp
python_scripts/test_writer/vne/: vne_test.cpp
python_scripts/yacas_inliner/: functionCall.py  inlineFunction.py  yacas_inliner.py
src/: d2_ee_dddd_AA.cpp  d2_ee_dddd_AA_xx.ey  d2_ee_dddd_AA_xz.ey  d2_ee_dddd_AA_yx.ey  d2_ee_dddd_AA_yy.ey  d2_ee_dddd_AA_yz.ey  d2_ee_dddd_AB.cpp  d2_ee_dddd_AC.cpp  d2_ee_dddd_AC_xx.ey  d2_ee_dddd_AC_xz.ey  d2_ee_dddd_AC_zx.ey  d2_ee_dddd_AC_zy.ey  d2_ee_dddd_AD.cpp  d2_ee_dddd_BA.cpp  d2_ee_dddd_BB.cpp  d2_ee_dddd_BC.cpp  d2_ee_dddd_CA.cpp  d2_ee_dddd_CB.cpp  d2_ee_dddd_CC.cpp  d2_ee_dddd_DA.cpp  d2_ee_dddd_DB.cpp  d2_ee_dddd_DC.cpp  d2_ee_dddd_DD.cpp  d2_ee_dddp_AA.cpp  d2_ee_dddp_AD.cpp  d2_ee_dddp_BA.cpp  d2_ee_dddp_BB.cpp  d2_ee_dddp_BD.cpp  d2_ee_dddp_CA.cpp  d2_ee_dddp_CB.cpp  d2_ee_dddp_CD.cpp  d2_ee_dddp_DA.cpp  d2_ee_dddp_DB.cpp  d2_ee_dddp_DC.cpp  d2_ee_ddds_AB.cpp  d2_ee_ddds_AC.cpp  d2_ee_ddds_AD.cpp  d2_ee_ddds_BA.cpp  d2_ee_ddds_BC.cpp  d2_ee_ddds_CA.cpp  (+1112 more)
test/: CMakeLists.txt
test/src/: gto_d2_kit_test.cpp  kinetic_test.cpp  overlap_test.cpp  vee_test.cpp  vne_test.cpp
yacas_scripts/: Cart2Herm.ys  boys_derivative_px_ax_bx_cx.ys  cartesian_to_spherical.ys  cse.ys  dR_one_electron.ys  echoSubFunctionBigL.ys  echoSubFunctionBigLDivided.ys  emitGgroup.ys  emit_bigL_eri_d2_divided.ys  emit_bigL_eri_d2_divided_iter.ys  emit_eri_d2.ys  emit_eri_d2_divided.ys  emit_eri_d2_old.ys  emit_eri_divided_utilities.ys  emit_eri_utilities.ys  emit_oe_d2_herm.ys  emit_single_eri_d2.ys  emit_single_eri_d2_divided.ys  emit_test.ys  generateGgroups.ys  hessian_overlap_herm.ys  hessian_two_electrons_coulomb.ys  overlap_gradient_herm.ys
yacas_scripts/old_version/: Cart2Herm.ys  R_functions.ys  cse.ys  d2R_one_electron.ys  emit_eri_d2.ys  emit_ne_d2.ys  hessian_ne_coulomb.ys  hessian_two_electrons_coulomb.ys  two_electrons_gradient_R.ys
yacas_scripts/semi_perfect_form/: d2R_two_electrons.ys  dPC.ys  dPQ.ys  emit_eri_d2.ys  hessian_kinetic_herm.ys  shells.ys
